# voxel_procedural_terrain_toy

./: Cargo.toml  README.md  steps.MD
.cargo/: config.toml
src/: camera.rs  chunk.rs  generation_params.rs  gui.rs  instance.rs  main.rs  quad.rs  region.rs  shader.wgsl  state.rs  texture.rs  vertex.rs  voxel.rs
